...
• Prevent user interface from hanging while loading data\n
• Preserve last location when returning to app\n
\n
<b>Version 0.1 Alpha</b>\n
• First demo release of SOTA Summit Mapping</string>

    <string name="preference_asked_for_consent">asked_for_consent</string>
    <string name="preference_enable_analytics">enable_analytics</string>
    <string name="preference_enable_crash_reports">enable_crash_reports</string>
    <string name="preference_changelog">changelog</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Map</string>
    <string name="title_dashboard">Summit List</string>
...
