...
        android:id="@+id/navigation_home"
        android:name="org.northwinds.app.sotachaser.ui.map.MapsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/associationFragment"
        android:name="org.northwinds.app.sotachaser.ui.associations.AssociationFragment"
        android:label="Association List"
        tools:layout="@layout/fragment_summit_list" >
        <action
            android:id="@+id/action_associationFragment_to_regionFragment"
            app:destination="@id/regionFragment"
...
